src/snapshots/pbsql__tql_validator__tests__create_index_compound_name.snap
---
source: src/tql_validator.rs
expression: "(translate_result, split_by_line_and_trim_spaces(sql))"
---
- Err: "Expected 1 identifiers for the index name, got: [\"a\", \"b\"]"
- - "CREATE INDEX a.b ON \"~/books/eloScores\" (score)"
